arreglamos algo de solicitud de modificacion